[gd_scene load_steps=11 format=3 uid="uid://qpnlcrvixd10"]

[ext_resource type="Script" path="res://Scenes/start_script.gd" id="1_0701d"]
[ext_resource type="Texture2D" uid="uid://csxcbtrxbofom" path="res://Imgs/BG_Placas.png" id="2_yylio"]
[ext_resource type="FontFile" uid="uid://50hs8n0ckrc5" path="res://Font/LondrinaShadow-Regular.ttf" id="3_kub7m"]
[ext_resource type="FontFile" uid="uid://cl0yiq4qq2mxc" path="res://Font/CabinSketch-Bold.ttf" id="3_q85uy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x443t"]
texture = ExtResource("2_yylio")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ychfu"]
bg_color = Color(0, 0, 0, 0.956863)
skew = Vector2(0.5, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axw4g"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhkny"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.0489529, 0.0489529, 0.0489528, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uui4k"]
bg_color = Color(0.195123, 0.195123, 0.195123, 1)
border_color = Color(0.295217, 0.295217, 0.295217, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6cro2"]
bg_color = Color(1, 1, 1, 1)
skew = Vector2(0.25, 0)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 1
shadow_color = Color(0, 0, 0, 0.47451)
shadow_size = 10
anti_aliasing = false

[node name="Project" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0701d")
metadata/_edit_horizontal_guides_ = [190.0]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x443t")

[node name="Button Back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -462.0
offset_top = -194.0
offset_right = -376.0
offset_bottom = -165.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_q85uy")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_ychfu")
theme_override_styles/normal = SubResource("StyleBoxFlat_axw4g")
text = "< Volver"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 189.0
offset_right = 441.0
offset_bottom = 436.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Este proyecto fue realizado en conjunto para la Maetría en Dirección y Producción de Animación y Videojuegos de la Universidad Nacional de las Artes (UNA) en conjunto con la Universidad Nacional de Córdoba (UNC).

El Taller de Don Ferrum está basado en el cómic original GauchoBots, del artista gráfico Martin Eschoyez."

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 470.0
offset_top = 190.0
offset_right = 651.0
offset_bottom = 426.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Equipo de Producción
y Desarrollo:

Juan Pascual Sgro
Paloma Gonzalez
Mauricio Rodriguez 
Martín Eschoyez
Horacio Alanís / Orazi
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -84.0
offset_right = 104.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button Intro" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 1.49
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kub7m")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_uhkny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uui4k")
theme_override_styles/normal = SubResource("StyleBoxFlat_6cro2")
text = "I N T R O"

[node name="Button Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 1.49
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kub7m")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_uhkny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uui4k")
theme_override_styles/normal = SubResource("StyleBoxFlat_6cro2")
text = "A R R A N C A R"

[node name="Button Project" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 1.49
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kub7m")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_uhkny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uui4k")
theme_override_styles/normal = SubResource("StyleBoxFlat_6cro2")
text = "P R O Y E C T O"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 148.0
offset_right = 722.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 11
text = "v.0.0.1
"

[connection signal="pressed" from="Panel/Button Back" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Button Intro" to="." method="_on_button_intro_pressed"]
[connection signal="pressed" from="VBoxContainer/Button Start" to="." method="_on_button_start_pressed"]
